--- a/frontend/src/app/prescricao-medica/lista-prescricao/lista-prescricao.component.html
+++ b/frontend/src/app/prescricao-medica/lista-prescricao/lista-prescricao.component.html
@@ -1,1 +1,19 @@
-<p>lista-prescricao works!</p>
+<p-treeTable [value]="listaPrescricoes" [columns]="cols" [scrollable]="true" scrollHeight="200px">
+    <ng-template pTemplate="header" let-columns>
+        <tr>
+            <th *ngFor="let col of columns">
+                {{col.header}}
+            </th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-rowNode let-rowData="rowData" let-columns="columns">
+        <tr>
+            <td *ngFor="let col of columns; let i = index">
+                <p-treeTableToggler [rowNode]="rowNode" *ngIf="i == 0"></p-treeTableToggler>
+                {{rowData[col.field]}}
+            </td>
+        </tr>
+    </ng-template>
+</p-treeTable>
+
+
