--- a/frontend/src/app/pacientes/components/formulario-paciente/endereco/endereco.component.html
+++ b/frontend/src/app/pacientes/components/formulario-paciente/endereco/endereco.component.html
@@ -15,12 +15,13 @@
             </div>
             <div class="ui-g-5 ui-sm-12">
                 <span class="ui-float-label">
-                    <p-inputMask
+                    <input
+                        pInputText
+                        id="cep"
                         placeholder="__.___-___"
-                        mask="99.999-999"
                         formControlName="cep"
                         pTooltip="Informe o CEP."
-                    ></p-inputMask>
+                    />
                     <label>CEP</label>
                 </span>
             </div>
