Padronizando telefones na aba de responsável

--- a/frontend/src/app/pacientes/components/formulario-paciente/formulario-cadastro.component.html
+++ b/frontend/src/app/pacientes/components/formulario-paciente/formulario-cadastro.component.html
@@ -12,6 +12,7 @@
             </p-accordionTab>
             <p-accordionTab header="Responsável">
                 <app-responsavel [responsavel]="responsavel"></app-responsavel>
+                <app-telefone [telefones]="telefones"></app-telefone>
             </p-accordionTab>
             <p-accordionTab header="Documentos">
                 <app-documentos [documentos]="documentos"></app-documentos>
