Retorno de dados do back

--- a/frontend/src/app/consulta/components/consulta-calendario/consulta-calendario.component.html
+++ b/frontend/src/app/consulta/components/consulta-calendario/consulta-calendario.component.html
@@ -1,1 +1,1 @@
-<p-fullCalendar [events]="events" [options]="options"></p-fullCalendar>
+<p-fullCalendar #fc [events]="events" [options]="options"></p-fullCalendar>
