--- a/frontend/src/app/pacientes/components/formulario-paciente/endereco/endereco.component.html
+++ b/frontend/src/app/pacientes/components/formulario-paciente/endereco/endereco.component.html
@@ -16,6 +16,7 @@
             <div class="ui-g-5 ui-sm-12">
                 <span class="ui-float-label">
                     <input
+                        (blur)="consultaCEP()"
                         pInputText
                         id="cep"
                         placeholder="__.___-___"
