Adiciona cenário de geração de requisição de material

--- a/frontend/src/app/suprimentos/components/requisicao-material/requisicao-material.component.html
+++ b/frontend/src/app/suprimentos/components/requisicao-material/requisicao-material.component.html
@@ -23,7 +23,7 @@
                         <button
                             pButton
                             type="button"
-                            label="Nova Transferência"
+                            label="Nova Requisição"
                             [routerLink]="['/requisicoes-materiais/nova']"
                             icon="ui-icon-add"
                         ></button>
