--- a/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
+++ b/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
@@ -7,10 +7,16 @@
                 <form [formGroup]="prescricaoDieta">
                     <div class="ui-g">
                         <div class="ui-g-12">
-                            <div class="ui-g-12">
+                            <div class="ui-g-6">
                                 <span class="md-inputfield">
                                     <input formControlName="nome" type="text" pInputText disabled />
                                     <label>Paciente</label>
+                                </span>
+                            </div>
+                            <div class="ui-g-6">
+                                <span class="md-inputfield">
+                                    <input formControlName="dataPrescricao" type="text" pInputText disabled />
+                                    <label>Data Prescrição</label>
                                 </span>
                             </div>
                         </div>
