--- a/frontend/src/app/prescricao-medica/medicamento/medicamento.component.html
+++ b/frontend/src/app/prescricao-medica/medicamento/medicamento.component.html
@@ -7,12 +7,20 @@
                     <form [formGroup]="prescricaoMedicamento">
                         <div class="ui-g">
                             <div class="ui-g-12">
-                                <div class="ui-g-12">
+                                <div class="ui-g-6">
                                     <span class="md-inputfield">
                                         <input formControlName="nome" type="text" pInputText disabled />
                                         <label>Paciente</label>
                                     </span>
                                 </div>
+
+                                <div class="ui-g-6">
+                                    <span class="md-inputfield">
+                                        <input formControlName="dataPrescricao" type="text" pInputText disabled />
+                                        <label>Data Prescrição</label>
+                                    </span>
+                                </div>
+
                             </div>
                             <div class="ui-g-12">
                                 <div class="ui-g-12">
@@ -118,8 +126,8 @@
                                 <div class="ui-g-5">
                                     <span class="md-inputfield">
                                         <p-dropdown placeholder="Selecione..." [filter]="true" [options]="listaDiluente"
-                                            emptyFilterMessage="Nenhum registro encontrado."
-                                            formControlName="diluente" #diluente>
+                                            emptyFilterMessage="Nenhum registro encontrado." formControlName="diluente"
+                                            #diluente>
                                         </p-dropdown>
                                         <label>Diluente</label>
                                     </span>
