Adicionar pesquisa por CEP - BASIS-134443 (#171)
* Incluindo validador de CPF

* Iniciando busca pelo cep

* Correção

* Modelagem da tabela de CEP

* Criando filtro para busca de CEP

* Otimizando imports

* Incluindo carga de teste

* Busca pelo cep

* Corrigindo template

* Corrigindo mapeamento

* Corrigindo carga

* Criando filtro para cep

* Conclusão de serviço de CEP

* Incluindo lombok

* corrigindo template

* Otimizando imports

* Conclusão de carga de teste

* Adicionando mais carga para CEPs do DF

* Adicionando parte 3 para carga de CEP do DF

* Adicionando caraga de CEP DF parte 4

* Finalizando carga de CEP do DF

* Alterando nome da Classe "CEP" para "EnderecoCEP"

* Correção

--- a/frontend/src/app/pacientes/components/formulario-paciente/endereco/endereco.component.html
+++ b/frontend/src/app/pacientes/components/formulario-paciente/endereco/endereco.component.html
@@ -3,6 +3,19 @@
         <div class="ui-g-12">
             <div class="ui-g-5 ui-sm-12">
                 <span class="ui-float-label">
+                    <input
+                        id="cep"
+                        (blur)="consultaCEP()"
+                        pInputText
+                        type="text"
+                        formControlName="cep"
+                        pTooltip="Informe o CEP."
+                    />
+                    <label>CEP</label>
+                </span>
+            </div>
+            <div class="ui-g-5 ui-sm-12">
+                <span class="ui-float-label">
                     <p-dropdown
                         (onChange)="aoSelecionarUF()"
                         [options]="ufs"
@@ -11,17 +24,6 @@
                         [filter]="true"
                         placeholder="UF"
                     ></p-dropdown>
-                </span>
-            </div>
-            <div class="ui-g-5 ui-sm-12">
-                <span class="ui-float-label">
-                    <p-inputMask
-                        placeholder="__.___-___"
-                        mask="99.999-999"
-                        formControlName="cep"
-                        pTooltip="Informe o CEP."
-                    ></p-inputMask>
-                    <label>CEP</label>
                 </span>
             </div>
         </div>
